syntax = "proto3";
package pb;
option go_package = "./pb";

message Empty {}

message HelloResponse {
    string hello = 1;
}

message RegisterRequest {
    string name = 1;
    string password = 2;
}

message RegisterResponse {
    string uid = 1;
}

service Server {
    rpc Hello(Empty) returns(HelloResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
}
